<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardLogIn"
        android:layout_width="415dp"
        android:layout_height="736dp"
        app:cardBackgroundColor="#2C2C2C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LogInLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/PasswordAccess"
                android:layout_width="301dp"
                android:layout_height="52dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/PasswordHint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#9AD59130"
                android:textColorHint="#4DFFFFFF"
                android:textColorLink="#FFA424"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccessWhiteLogo"
                app:layout_constraintVertical_bias="0.194"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/EmailAccess"
                android:layout_width="301dp"
                android:layout_height="52dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/EmailHint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#9AD59130"
                android:textColorHint="#4DFFFFFF"
                android:textColorLink="#FFA424"
                app:layout_constraintBottom_toTopOf="@+id/PasswordAccess"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccessWhiteLogo"
                app:layout_constraintVertical_bias="0.65"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/AccessWhiteLogo"
                android:layout_width="270dp"
                android:layout_height="240dp"
                android:contentDescription="@string/AccessWhiteLogo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.147"
                app:srcCompat="@drawable/logo_con_letras_blanco" />

            <Button
                android:id="@+id/AccessButton"
                android:layout_width="161dp"
                android:layout_height="70dp"
                android:text="@string/AccessButton"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PasswordAccess"
                app:layout_constraintVertical_bias="0.146" />

            <Button
                android:id="@+id/ForgottenPassButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/ForgottenPassButton"
                android:textColor="#FAFAFA"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.819"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccessButton"
                app:layout_constraintVertical_bias="0.306" />

            <Button
                android:id="@+id/RegistrarButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/RegisterButton"
                android:textColor="#FAFAFA"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.819"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ForgottenPassButton"
                app:layout_constraintVertical_bias="0.222" />

            <TextView
                android:id="@+id/TextHasOlvidadoLaContraseña"
                android:layout_width="243dp"
                android:layout_height="24dp"
                android:text="@string/ForgottenPassButtonText"
                android:textColor="#B3FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.331"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccessButton"
                app:layout_constraintVertical_bias="0.35"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/TextNoTienesCuenta"
                android:layout_width="144dp"
                android:layout_height="18dp"
                android:text="@string/RegisterText"
                android:textColor="#B3FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.464"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccessButton"
                app:layout_constraintVertical_bias="0.672"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>