<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="414dp"
        android:layout_height="738dp"
        app:cardBackgroundColor="#789DCA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/UserPicture"
                android:layout_width="74dp"
                android:layout_height="77dp"
                android:contentDescription="@string/user_image"
                android:src="@drawable/icono_usuario"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.244"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <TextView
                android:id="@+id/tittle_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_edit_profile"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.585"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.081"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/SaveChangesButton"
                android:layout_width="154dp"
                android:layout_height="66dp"
                android:text="@string/SaveButton"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.88" />

            <TextView
                android:id="@+id/tittle_edit_profile_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.116"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.172"
                tools:ignore="TextContrastCheck" />

            <ScrollView
                android:id="@+id/scrollView3"
                android:layout_width="356dp"
                android:layout_height="422dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tittle_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/NameHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/change_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/NameHint"
                        android:inputType="textPersonName"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/tittle_change_fisrt_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/FirstSurnameHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/change_first_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/FirstSurnameHint"
                        android:inputType="textPersonName"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/tittle_change_second_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SecondSurnameHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/change_second_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/SecondSurnameHint"
                        android:inputType="textPersonName"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/tittle_change_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/EmailHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/change_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/EmailHint"
                        android:inputType="textEmailAddress"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/tittle_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PasswordHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/cange_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/PasswordHint"
                        android:inputType="textPassword"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/tittle_confirm_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ConfirmNewPasswordHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/editTextTextPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/ConfirmNewPasswordHint"
                        android:inputType="textPassword"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/tittle_change_pet_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SelectPetTypeHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <Spinner
                        android:id="@+id/change_select_pet_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/SelectPetTypeHint"
                        android:minHeight="48dp"
                        android:visibility="visible"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/tittle_change_pet_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PetWeightHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/change_pet_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/PetWeightHint"
                        android:inputType="numberDecimal"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/tittle_change_id_feeder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/IDFeederHint"
                        android:textColor="#547398" />

                    <EditText
                        android:id="@+id/change_id_feeder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/IDFeederHint"
                        android:inputType="textPersonName"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>