<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.cardview.widget.CardView
        android:layout_width="411dp"
        android:layout_height="733dp"
        app:cardBackgroundColor="#688DB9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/RegisterTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/RegisterTittle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.071" />

            <Button
                android:id="@+id/SaveButton"
                android:layout_width="156dp"
                android:layout_height="64dp"
                android:onClick="saveNewUser"
                android:text="@string/SaveButton"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintVertical_bias="0.504" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="334dp"
                android:layout_height="411dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.43">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tittle_name2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/NameHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/NewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/NameHint"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/tittle_change_fisrt_surname2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/FirstSurnameHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/NewFirstSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/FirstSurnameHint"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/tittle_change_second_surname2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SecondSurnameHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/NewSecondSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/SecondSurnameHint"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/tittle_change_email2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/EmailHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/NewEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/EmailHint"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/tittle_change_password2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PasswordHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/NewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/PasswordHint"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/tittle_confirm_change_password2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ConfirmNewPasswordHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/ConfirmNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/ConfirmNewPasswordHint"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/tittle_change_pet_type2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SelectPetTypeHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <Spinner
                        android:id="@+id/SelectPetType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/SelectPetTypeHint"
                        android:minHeight="48dp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tittle_change_pet_weight2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PetWeightHint"
                        android:textColor="#547398"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/PetWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/PetWeightHint"
                        android:inputType="numberDecimal"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/tittle_change_id_feeder2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/IDFeederHint"
                        android:textColor="#547398" />

                    <EditText
                        android:id="@+id/IDFeeder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/IDFeederHint"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>